assets/css/style.css
.dumb {
    text-align:center;
    font-size: 90px;
}/* .bodyWhite {
    background-color:red;
} */

.titleInit {
    color: black;
    text-align: center;
    font-size: 800%;
    margin: 0;
    padding: 2% auto 0 auto;
}

.titleSpan {
    color: black;
    text-align: center;
    font-size: 800%;
    margin: 0;
    padding: 2% auto 0 auto;
    /* text-shadow: 2px 2px 4px #000000; */

}

.titleSpan:hover {
    color: rgb(145, 253, 21);
    text-decoration: none;
}

.titleHover {
    text-decoration: none;
}

a:hover {
text-decoration: none;
}

.E_magic {
    color: black;
    text-decoration: none;
    background-color: none;
    border: none;
}

.E_magic:hover {
    color: rgb(145, 253, 21);
    text-decoration: none;
}

/* canvas { background: #eee; display: block; margin: 0 auto; } */

/* .meSpacerHeight {
    opacity: 0;
    width: 10px;
    
} */
/* .aboutMeDiv {
    height:220px;
} */
.meCartoon {
    display: block;
    margin: 0 auto;
    
}
.aboutTextHover {
    text-align: center;
    color: rgb(145, 253, 21);
}



.appleii {
    display: block;
    margin: 30% auto 0 auto;
    width: 80%;
    
}

.codeTextHover {
    text-align: center;
    color: rgb(145, 253, 21);
}

.saw {
    display: block;
    margin: 0 auto 0 auto;
    width: 80%;
    
    
}

.sawTextHover {
    text-align: center;
    color: rgb(145, 253, 21);
}


.gameboy {
    display: block;
    margin: 0 auto 0 auto;
    width: 80%;
    
}

/* CODING PORTFOLIO PAGE */

/* .siteTitleAreaPortfolio {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   
} */
/* .wholeCardArea {
    background-image: linear-gradient(to bottom, #FFFFFF, #F0E6D7);
} */
.codeSiteCards {
    display: block;
    margin: 7% auto;
    width: 80%
}

/* .codeCard1 {
    background-color: #F0E6D7;
}
.codeCard2 {
    background-color: #F4Ae3F;
}
.codeCard3 {
    background-color: #28696A;
}
.codeCard4 {
    background-color: #213058;
}
.codeCard5 {
    background-color: rgb(73, 1, 19);
} */


.gradientCard1 {
    background-image: linear-gradient(to bottom right, rgb(150, 255, 255),rgb(233, 255, 255));
    box-shadow: 5px 5px 10px #888888;
    
}
.gradientCard2 {
    background-image: linear-gradient(to bottom right, rgb(150, 255, 255),rgb(233, 255, 255));
    /* background-image: linear-gradient(to bottom right, rgb(187, 209, 255),rgb(253, 233, 255)); */
    box-shadow: 5px 5px 10px #888888;
   
}
.gradientCard3 {
    background-image: linear-gradient(to bottom right, rgb(150, 255, 255),rgb(233, 255, 255));
    box-shadow: 5px 5px 10px #888888;
}
.gradientCard4 {
    background-image: linear-gradient(to bottom right, rgb(150, 255, 255),rgb(233, 255, 255));
    box-shadow: 5px 5px 10px #888888;
}
.gradientCard5 {
    background-image: linear-gradient(to bottom right, rgb(150, 255, 255),rgb(233, 255, 255));
    box-shadow: 5px 5px 10px #888888;
}
.gradientCard6 {
    background-image: linear-gradient(to bottom right, rgb(150, 255, 255),rgb(233, 255, 255));
    box-shadow: 5px 5px 10px #888888;
}


/* ABOUT ME PAGE */


.mePic {
    display: block;
    margin: 7% auto;
    width: 80%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.mePicHover {
    text-align: center;
    color: rgb(145, 253, 21);
}

.aboutText {
    /* padding: 40% 2%; */
    display: block;
    margin: 18% auto;
    width: 80%
}

.aboutText:hover {
    color: rgb(145, 253, 21);
}

.tester1 {
    text-align: center;
}
.test1Btn {
    border-radius: 20px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    text-align: center;
}

.pokemonChoice {
    text-align: center;
}

.pikaBtn {
    border-radius: 20px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    text-align: center;
    background-color: none;
    text-decoration: none;
    border: none;
}

.buildCards {
    /* display: block; */
    /* margin: 7% auto; */
    display: inline;
    margin: 1%;
    width: 30%
}

/* .buildCards:hover {
    display: block;
    margin: 1%;
    width: 50%
} */

